--- a/musica.css
+++ b/musica.css
@@ -5,7 +5,7 @@
 .menu {
     width: 100%;
     height: 60px;
-    background-color: salmon;
+    background-color: #3f3a36 ;
 }
 .conteudo-musica {
     width: 100%;
@@ -68,12 +68,11 @@
 
 
 
-.img-2 {
-    width: 100%;
+.img-temp {
+    width:100%;
 }
-.img-3 {
-    width: 100%;
-}
+
+
 
 
 
@@ -81,7 +80,7 @@
     width: 100%;
 }
 
-/*Que isso prof? explica pfv.*/
+/*Removido por conflito
 @media screen and (min-width: 768px) {
     .menu {
         height: 120px;
@@ -108,83 +107,87 @@
         display: grid;
     }
 }
+*/
 
-/*eu to cansado, so vo checar o codigo dps.*/
+/* Theming */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"); /* import font */
+
 :root{
-    --fundo: rgba(255, 208, 0, 0.863);
-    --fonte: rgb(0, 0, 0);
-    --hover: rgb(46, 45, 1);
+    --white: #f9f9f9;
+    --black: #3f3a36;
+    --gray: #8c8885;
+} /* variables*/
 
-
+/* Reset */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 body{
-    background-color: rgba(245, 169, 6, 0.822);
+    background-color: var(--white);
+    font-family: "Poppins", sans-serif;
 }
-a {
+a{
     text-decoration: none;
 }
-
 ul{
-    list-style-type: none;
+    list-style: none;
 }
+/* Header */
 .header{
-
-    background-color: var(--fonte);
-    width: 100%;
+    background-color: var(--black);
+    box-shadow: 1px 1px 5px 0px var(--gray);
     position: sticky;
     top: 0;
-
+    width: 100%;
 }
+/* Logo */
 .logo{
     display: inline-block;
-   color: var(--fundo);
-   font-size: 32px;
-  
+    color: var(--white);
+    font-size: 60px;
+    margin-left: 10px;
 }
-#logo{
-  height: 10vh;
-
-}
-.sites{
-    display: inline
-}
-/*^ com isso, eu durmo.*/
+/* Nav menu */
 .nav{
     width: 100%;
     height: 100%;
     position: fixed;
-    background: var(--fundo);
+    background-color: var(--black);
     overflow: hidden;
+
 }
-.menu2 a{
-    display: inline;
-    padding: 10px;
-    color: var(--fonte);
-    
+.menu a{
+    display: block;
+    padding: 30px;
+    color: var(--white);
 }
-.menu2 a:hover{
-    background-color: var(--hover);
+.menu a:hover{
+    background-color: var(--gray);
 }
 .nav{
     max-height: 0;
-    transition: max-height .1s ease-out;
-}
-.hamburger{
+    transition: max-height .5s ease-out;
+}/* Menu Icon */
+.hamb{
     cursor: pointer;
     float: right;
-    padding: 35px 20px;
-}
-.hamb-line{
-    background: var(--fonte);
+    padding: 40px 20px;
+}/* Style label tag */
+
+.hamb-line {
+    background: var(--white);
     display: block;
     height: 2px;
     position: relative;
     width: 24px;
 
-}
+} /* Style span tag */
+
 .hamb-line::before,
 .hamb-line::after{
-    background: var(--fonte);
+    background: var(--white);
     content: '';
     display: block;
     height: 100%;
@@ -198,24 +201,159 @@ ul{
 .hamb-line::after{
     top: -5px;
 }
-.side-menu{
-    display: none;
-}
-.side-menu:checked ~ nav{
- max-height: 100%;
-}
 
-.side-menu:checked ~ .hamburger .hamb-line{
+.side-menu {
+    display: none;
+} /* Hide checkbox */
+/* Toggle menu icon */
+.side-menu:checked ~ nav{
+    max-height: 100%;
+}
+.side-menu:checked ~ .hamb .hamb-line {
     background: transparent;
 }
-.side-menu:checked ~ .hamburger .hamb-line::before{
+.side-menu:checked ~ .hamb .hamb-line::before {
     transform: rotate(-45deg);
-    top: 0;
+    top:0;
 }
-.side-menu:checked ~ .hamburger .hamb-line::after{
-    transform: rotate(+45deg);
-    top: 0;
+.side-menu:checked ~ .hamb .hamb-line::after {
+    transform: rotate(45deg);
+    top:0;
 }
+/* Responsiveness */
+@media (min-width: 768px) {
+    .nav{
+        max-height: none;
+        top: 0;
+        position: relative;
+        float: right;
+        width: fit-content;
+        background-color: transparent;
+    }
+    .menu li{
+        float: left;
+    }
+    .menu a:hover{
+        background-color: transparent;
+        color: var(--gray);
+
+    }
+
+    .hamb{
+        display: none;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*eu to cansado, so vo checar o codigo dps.*/
+/*
+:root{
+    --fundo: rgba(255, 208, 0, 0.863);
+    --fonte: rgb(0, 0, 0);
+    --hover: rgb(46, 45, 1);
+
+
+}
+body{
+    background-color: rgba(245, 169, 6, 0.822);
+}
+
+a {
+    text-decoration: none;
+ font-size: 16px;
+}
+
+ul{
+    list-style-type: none;
+}
+
+.header{
+
+    background-color: var(--fonte);
+    width: 100%;
+    position: sticky;
+    top: 0;
+
+}
+.logo{
+    display: inline-block;
+   color: var(--fundo);
+   font-size: 10px;
+  
+}
+#logo{
+  height: 10px;
+
+}
+
+.sites{
+    display: inline
+}
+
+.nav{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: var(--fundo);
+    overflow: hidden;
+}   
+.menu2 a{
+    display: inline;
+    padding: 10px;
+    color: var(--fonte);
+    
+}
+.menu2 a:hover{
+    background-color: var(--hover);
+}
+.nav{
+    max-height: 0;
+    transition: max-height .1s ease-out;
+}   
+
+#top, #bottom { position:fixed; top:0; left:0 }
+#top { z-index:9; } #bottom { z-index:8; }
+
+
+.hamburger{cursor: pointer;float: right;padding: 35px 20px;position:absolute;  }
+
+.hamb-line{
+    background: var(--fonte);
+    display: block;
+    height: 2px;
+    position: absolute;
+    width: 24px;
+}
+
+.hamb-line::before,
+.hamb-line::after{
+    background: var(--fonte);
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+.hamb-line::before{top: 5px;}
+.hamb-line::after{top: -5px;}
+.side-menu{display: none;}
+.side-menu:checked ~ nav{max-height: 100%;}
+
+.side-menu:checked ~ .hamburger .hamb-line{background: transparent;}
+.side-menu:checked ~ .hamburger .hamb-line::before{transform: rotate(-45deg);top: 0;}
+.side-menu:checked ~ .hamburger .hamb-line::after{transform: rotate(+45deg);top: 0;} 
 
 
 .img-ini{
@@ -247,3 +385,9 @@ ul{
 
    }
     }
+
+
+
+
+
+*/
